# chatbot

./: ChatAgent.py  README.md  app.py  main.py  pyproject.toml  results.json
Tools/: WebpageScraper.py
agents/: ChatAgent.py
controllers/: chatbot.py
models/: Message.py
vectors/: VectorStore.py  WebsiteCrawler.py
