[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Li"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-groq = "^0.1.3"
pydantic = "^2.7.1"
load-dotenv = "^0.1.0"
langchain-openai = "^0.1.6"
panel = "^1.4.2"
utils = "^1.0.2"
langchain = "^0.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
